--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/LuiggiAntonni/CloneDoTwitter#readme",
   "dependencies": {
+    "body-parser": "^1.19.2",
     "express": "^4.17.3",
+    "mongodb": "^4.4.1",
     "nodemon": "^2.0.15",
     "pug": "^3.0.2"
   }
