--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   },
   "homepage": "https://github.com/LuiggiAntonni/CloneDoTwitter#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
     "express": "^4.17.3",
     "mongodb": "^4.4.1",
+    "mongoose": "^6.2.6",
     "nodemon": "^2.0.15",
     "pug": "^3.0.2"
   }
